--- a/app/ui/dashboard.html
+++ b/app/ui/dashboard.html
@@ -17,6 +17,13 @@
     </div>
     <div id="empty-state" class="empty-state">create team to get started</div>
     <div id="teams-list" class="teams-list" style="display:none;"></div>
+    <!-- Loading overlay -->
+    <div id="loading-overlay" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); z-index:2000; align-items:center; justify-content:center;">
+      <div style="background:#23242a; padding:2em; border-radius:10px; display:flex; flex-direction:column; align-items:center;">
+        <div class="loader" style="border: 8px solid #f3f3f3; border-top: 8px solid #1abc9c; border-radius: 50%; width: 60px; height: 60px; animation: spin 1s linear infinite;"></div>
+        <span style="margin-top:1em; color:#fff;">Loading...</span>
+      </div>
+    </div>
   </div>
     <!-- Custom Modal for Team Name -->
     <div id="team-modal" class="modal" style="display:none;">
@@ -33,3 +40,10 @@
   <script src="../ui/scripts/dashboard.js"></script>
 </body>
 </html>
+
+<style>
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
