--- a/app/ui/team.html
+++ b/app/ui/team.html
@@ -20,23 +20,23 @@
         <input class="sprint-modal-date" id="sprint-end" type="date" placeholder="To" />
       </div>
       <div style="display: flex; align-items: center; gap: 1em; margin-bottom: 0.5em;">
-        <label for="total-capacity-input" style="font-weight:bold; color:#fff;">Total capacity for all:</label>
+        <label for="total-capacity-input" style="font-weight:bold; color:#fff;">Total capacity for all(days):</label>
   <input id="total-capacity-input" type="number" placeholder="0" style="padding:0.5em; width:120px;" />
-  <label for="default-scrum-adhoc-input" style="font-weight:bold; color:#fff; margin-left:1em;">Default Scrum+Adhoc:</label>
+  <label for="default-scrum-adhoc-input" style="font-weight:bold; color:#fff; margin-left:1em;">Default Scrum+Adhoc(days):</label>
   <input id="default-scrum-adhoc-input" type="number" placeholder="0" style="padding:0.5em; width:120px;" />
       </div>
       <table class="sprint-modal-table" id="capacity-table">
         <thead>
           <tr>
             <th>Name</th>
-            <th>Total capacity</th>
-            <th>Leaves</th>
-            <th>Scrum+Adhoc</th>
-            <th>Available capacity</th>
-            <th>Relative capacity to be planned</th>
-            <th>Spillover</th>
+            <th>Total capacity (days)</th>
+            <th>Leaves (days)</th>
+            <th>Scrum+Adhoc (days)</th>
+            <th>Available capacity (days)</th>
+            <th>capacity tobe planned (SP)</th>
+            <th>Spillover (SP)</th>
             <th>Reason for spillover</th>
-            <th>Total sp committed</th>
+            <th>Total sp committed (SP)</th>
             <th>Tasks</th>
           </tr>
         </thead>
@@ -53,7 +53,19 @@
       </div>
     </form>
   </div>
+    <!-- Loading overlay -->
+    <div id="loading-overlay" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); z-index:2000; align-items:center; justify-content:center;">
+      <div style="background:#23242a; padding:2em; border-radius:10px; display:flex; flex-direction:column; align-items:center;">
+        <div class="loader" style="border: 8px solid #f3f3f3; border-top: 8px solid #1abc9c; border-radius: 50%; width: 60px; height: 60px; animation: spin 1s linear infinite;"></div>
+        <span style="margin-top:1em; color:#fff;">Loading...</span>
+      </div>
+    </div>
     <script src="scripts/teamController.js"></script>
-  </script>
+    <style>
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    </style>
 </body>
 </html>
